--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,20 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    position: relative;
+}
+
+#root::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background-image: url("assets/background.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.5;
 }
